Fix: sidebar ad visibility breakpoint, RLS disable SQL for ads

--- a/src/app/page.css
+++ b/src/app/page.css
@@ -67,7 +67,7 @@
   width: 160px;
 }
 
-@media (max-width: 960px) {
+@media (max-width: 1100px) {
   .homepage-outer {
     flex-direction: column;
   }
